# jparse

./: LICENSE  README.md  jparse.cabal  package.yaml  stack.yaml
app/: Bundle.hs  Driver.hs  Final.hs  Gates.hs  Global.hs  Helper.hs  Main.hs  MainTest.hs  Options.hs  Sources.hs  Streams.hs  Vectorize.hs
app/Driver/: Distributor.hs  Internal.hs
cbits/: seek.h
filter/: Filter.hs  FilterOptions.hs  Toascii.hs  filter.cabal  stack.yaml
src/: JParse.hs  Parse.hs
src/Data/: Nullable.hs
src/Data/ByteString/: Build.hs  Seek.hs  Split.hs
src/Data/ByteString/Streaming/: Compat.hs  Gates.hs  Sources.hs
src/Data/ByteString/Streaming/Compat/: Char8.hs  Internal.hs  Type.hs
src/JParse/: Attoparsec.hs  Channels.hs  Driver.hs  Global.hs  Helper.hs  Internal.hs  Parser.hs  Pipeline.hs  Streams.hs  Zepto.hs
src/JParse/Attoparsec/: Common.hs  Conduit.hs  Internal.hs  Streaming.hs
src/JParse/Driver/: Distributor.hs  Internal.hs
src/JParse/Util/: Builder.hs
src/JParse/Zepto/: Internal.hs
src/Parse/: Match.hs  MatchStream.hs  MatchZepto.hs  Parser.hs  Read.hs  ReadAlt.hs  ReadStream.hs  ReadZepto.hs  Symbol.hs
src/Parse/ASCII/: Attoparsec.hs  ByteLiterals.hs  Zepto.hs
src/Parse/JSON/Match/: Attoparsec.hs  Internal.hs  Zepto.hs
src/Parse/JSON/Read/: Internal.hs  Zepto.hs
src/Parse/Match/: Internal.hs
src/Parse/Parser/: Attoparsec.hs  Internal.hs  Stream.hs  Zepto.hs  ZeptoStream.hs
src/Parse/Read/: Internal.hs
src/Util/: Helper.hs  Streaming.hs
src/Util/ByteString/: Build.hs  Seek.hs  Split.hs
test/: Benchmark.hs  Spec.hs
(+3 files in other folders)
